--- a/index.html
+++ b/index.html
@@ -11,28 +11,28 @@
       <div class='container'>
             <div class='inner'>
                   <div class='item'>
-                        <img src="" alt="" class="ing">
-                        <button class="btn" id="btn1"></button>
+                        <img src="1.png" alt="Pizza" class="ing">
+                        <button class="btn" id="btn1">Add</button>
                   </div>
                   <div class='item'>
-                        <img src="" alt="" class="ing">
-                        <button class="btn" id="btn2"></button>
+                        <img src="1.png" alt="Pizza" class="ing">
+                        <button class="btn" id="btn2">Add</button>
                   </div>
                   <div class='item'>
-                        <img src="" alt="" class="ing">
-                        <button class="btn" id="btn3"></button>
+                        <img src="1.png" alt="Pizza" class="ing">
+                        <button class="btn" id="btn3">Add</button>
                   </div>
                   <div class='item'>
-                        <img src="" alt="" class="ing">
-                        <button class="btn" id="btn4"></button>
+                        <img src="1.png" alt="Pizza" class="ing">
+                        <button class="btn" id="btn4">Add</button>
                   </div>
                   <div class='item'>
-                        <img src="" alt="" class="ing">
-                        <button class="btn" id="btn5"></button>
+                        <img src="1.png" alt="Pizza" class="ing">
+                        <button class="btn" id="btn5">Add</button>
                   </div>
                   <div class='item'>
-                        <img src="" alt="" class="ing">
-                        <button class="btn" id="btn6"></button>
+                        <img src="1.png" alt="Pizza" class="ing">
+                        <button class="btn" id="btn6">Add</button>
                   </div>
             </div>
       </div>
